bootstrap + index test

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <link rel="canonical" href="https://www.diffuz.com/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diffuz | Petites actions pour grands défis</title>
-  <link rel="stylesheet" type="text/css" href="styles/inline.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/inline.css">
 
   <!-- TODO add manifest here -->
   <link rel="manifest" href="/manifest.json">
@@ -37,12 +38,55 @@
 <body>
 
   <header class="header">
-    <h1 class="header__title">Diffuz</h1>
+    <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" title="Revenir à la page d’accueil" />
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="butAdd" class="headerButton" aria-label="Add"></button>
   </header>
 
   <main class="main">
+
+    <!-- BOOTSTRAP DEMO -->
+    <div class="container">
+
+      <div class="jumbotron">
+        <h1>Jumbotron heading</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>© 2016 Company, Inc.</p>
+      </footer>
+
+    </div>
+    <!-- BOOTSTRAP DEMO -->
+
+
+
     <div class="card cardTemplate weather-forecast" hidden>
       <div class="city-key" hidden></div>
       <div class="card-last-updated" hidden></div>
@@ -142,6 +186,7 @@
     </div>
   </main>
 
+
   <div class="dialog-container">
     <div class="dialog">
       <div class="dialog-title">Add new city</div>
@@ -165,12 +210,17 @@
     </div>
   </div>
 
+
   <div class="loader">
     <svg viewBox="0 0 32 32" width="32" height="32">
       <circle id="spinner" cx="16" cy="16" r="14" fill="none"></circle>
     </svg>
   </div>
 
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
   <!-- Uncomment the line below when ready to test with fake data -->
   <script src="scripts/app.js" async></script>
 
