--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diffuz | Petites actions pour grands défis</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/inline.css">
+  <link rel="stylesheet" type="text/css" href="css/theme_original.css">
 
   <!-- TODO add manifest here -->
   <link rel="manifest" href="/manifest.json">
@@ -38,9 +38,16 @@
 <body>
 
   <header class="header">
-    <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" title="Revenir à la page d’accueil" />
-    <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
-    <button id="butAdd" class="headerButton" aria-label="Add"></button>
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left;">
+      <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
+    </div>
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 logo" style="text-align:center;">
+      <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" title="Revenir à la page d’accueil" />
+    </div>
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:right;">
+      <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
+      <button id="butAdd" class="headerButton" aria-label="Add"></button>
+    </div>
   </header>
 
   <main class="main">
@@ -48,10 +55,10 @@
     <!-- BOOTSTRAP DEMO -->
     <div class="container">
 
-      <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
+      <div class="jumbotron" style="margin-top: 30px;">
+        <h1>Lorem ipsum header</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up</a></p>
       </div>
 
       <div class="row marketing">
