--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:right;">
       <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
       <button id="butAdd" class="headerButton" aria-label="Add"></button>
+      <button id="butInscription" class="headerButton" aria-label="Inscription"></button>
     </div>
   </header>
 
@@ -194,7 +195,7 @@
   </main>
 
 
-  <div class="dialog-container">
+  <div id="addDialog" class="dialog-container">
     <div class="dialog">
       <div class="dialog-title">Add new city</div>
       <div class="dialog-body">
@@ -213,6 +214,19 @@
       <div class="dialog-buttons">
         <button id="butAddCity" class="button">Add</button>
         <button id="butAddCancel" class="button">Cancel</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="inscriDialog" class="dialog-container">
+    <div class="dialog">
+      <div class="dialog-title">Inscription</div>
+      <div class="dialog-body">
+
+      </div>
+      <div class="dialog-buttons">
+        <button id="butInscri" class="button">Add</button>
+        <button id="butInscriCancel" class="button">Cancel</button>
       </div>
     </div>
   </div>
