--- a/index.html
+++ b/index.html
@@ -39,14 +39,21 @@
 
   <header class="header">
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left;">
-      <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
+      <button id="butMenu" type="button" class="btn btn-default headerButton" aria-label="Left Align" title="Menu">
+        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+      </button>
+
     </div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 logo" style="text-align:center;">
       <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" title="Revenir à la page d’accueil" />
     </div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:right;">
-      <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
-      <button id="butAdd" class="headerButton" aria-label="Add"></button>
+      <button id="butRefresh" type="button" class="btn btn-default headerButton" aria-label="Refresh Right Align" title="Refresh">
+        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+      </button>
+      <button id="butAdd" type="button" class="btn btn-default headerButton" aria-label="Add Right Align" title="Add">
+        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+      </button>
     </div>
   </header>
 
