add btn + header new version

--- a/index.html
+++ b/index.html
@@ -38,21 +38,15 @@
 <body>
 
   <header class="header">
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left;">
-      <button id="butMenu" type="button" class="btn btn-default headerButton" aria-label="Left Align" title="Menu">
-        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-      </button>
-
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 logo" style="text-align:left;">
+      <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" />
     </div>
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 logo" style="text-align:center;">
-      <img src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" title="Revenir à la page d’accueil" />
-    </div>
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:right;">
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align:right;">
       <button id="butRefresh" type="button" class="btn btn-default headerButton" aria-label="Refresh Right Align" title="Refresh">
-        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
       </button>
       <button id="butAdd" type="button" class="btn btn-default headerButton" aria-label="Add Right Align" title="Add">
-        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
       </button>
     </div>
   </header>
@@ -93,7 +87,7 @@
       </div>
 
       <footer class="footer">
-        <p>© 2016 Company, Inc.</p>
+        <p>© 2017 Diffuz.com</p>
       </footer>
 
     </div>
@@ -200,7 +194,9 @@
     </div>
   </main>
 
-
+<div id="btnAddChallenge" class="btnAddChallenge" >
+  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+</div>
   <div id="addDialog" class="dialog-container">
     <div class="dialog">
       <div class="dialog-title">Add new city</div>
