--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main class="main">
 
     <!-- BOOTSTRAP DEMO -->
-    <div class="container">
+    <div id="lorem" class="container" hidden>
 
       <div class="jumbotron" style="margin-top: 30px;">
         <h1>Lorem ipsum header</h1>
