add challenge btn

--- a/index.html
+++ b/index.html
@@ -193,10 +193,9 @@
       </div>
     </div>
   </main>
+  
+  <button tabindex="2" id="btnAddChallenge" class="btnAddChallenge">Add challenge</button>
 
-<div id="btnAddChallenge" class="btnAddChallenge" >
-  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-</div>
   <div id="addDialog" class="dialog-container">
     <div class="dialog">
       <div class="dialog-title">Add new city</div>
