--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
       </footer>
     </div>
 
+    <div id="home" class="container"></div>
+    <div id="defiDetail" class="container" hidden="true"></div>
+    <div id="defiCreate" class="container" hidden="true"></div>
+    <div id="welcome" class="container" hidden="true"></div>
+    <div id="inscription" class="container" hidden="true"></div>
+    <div id="login" class="container" hidden="true"></div>
+    <div id="profil" class="container" hidden="true"></div>
+    <div id="modifUser" class="container" hidden="true"></div>
+    <div id="achiv" class="container" hidden="true"></div>
+    <div id="classement" class="container" hidden="true"></div>
+    <div id="carto" class="container" hidden="true"></div>
+
   </main>
 
   <button tabindex="2" id="btnAddChallenge" class="btnAddChallenge">Add challenge</button>
