defis demo Home

--- a/index.html
+++ b/index.html
@@ -99,9 +99,22 @@
 
       <h3 style="font-weight:bold;">Défis à la une</h3>
 
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
+      <div class="row listDefi">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
+          <img src="images/defi00.jpg" alt="Defi 00" />
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
+          <img src="images/defi01.jpg" alt="Defi 01" />
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
+          <img src="images/defi00.jpg" alt="Defi 00" />
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
+          <img src="images/defi01.jpg" alt="Defi 01" />
+        </div>
       </div>
+
+
 
     </div>
 
