--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
       <h3 style="font-weight:bold;">Défis à la une</h3>
 
       <div class="row listDefi">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
-          <img src="images/defi00.jpg" alt="Defi 00" />
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
+          <a href="javascript:void(0)"><img src="images/defi00.jpg" alt="Defi 00" /></a>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
-          <img src="images/defi01.jpg" alt="Defi 01" />
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
+          <a href="javascript:void(0)"><img src="images/defi01.jpg" alt="Defi 01" /></a>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
-          <img src="images/defi00.jpg" alt="Defi 00" />
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
+          <a href="javascript:void(0)"><img src="images/defi00.jpg" alt="Defi 00" /></a>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
-          <img src="images/defi01.jpg" alt="Defi 01" />
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
+          <a href="javascript:void(0)"><img src="images/defi01.jpg" alt="Defi 01" /></a>
         </div>
       </div>
 
@@ -118,7 +118,25 @@
 
     </div>
 
-    <div id="defiDetail" class="container hideMe"></div>
+    <div id="defiDetail" class="container hideMe">
+      <button id="retourDetail" tabindex="2" class="btnRetour">Retour</button>
+      <!-- TODO slider -->
+      <div class="row listDefi">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
+          <img src="images/defi01.jpg" alt="Defi 01" />
+        </div>
+      </div>
+
+      <p>Plus on est de fous, plus on (t)rie !</p>
+      <p>Desciption du défi toussa toussa...
+      bref tout ce dont l'utilisateur a besoin</p>
+
+      <p>17/11/2017 de 13:00 à 18:00 | Entre une heure et 1/2 journée</p>
+
+      <!-- TODO Map -->
+      <p>4 participants :</p>
+      <!-- TODO list user -->
+    </div>
     <div id="defiCreate" class="container hideMe"></div>
     <div id="welcome" class="container hideMe"></div>
     <div id="inscription" class="container hideMe"></div>
