--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <div id="modifUser" class="container hideMe"></div>
     <div id="achiv" class="container hideMe">
       Succes et Points !
+      <button class="js-push-button">Subscribe to Push Notifications</button>
     </div>
     <div id="classement" class="container hideMe"></div>
     <div id="carto" class="container hideMe"></div>
