--- a/index.html
+++ b/index.html
@@ -119,20 +119,23 @@
     </div>
 
     <div id="defiDetail" class="container hideMe">
-      <button id="retourDetail" tabindex="2" class="btnRetour">Retour</button>
-      <!-- TODO slider -->
+      <button id="retourDetail" tabindex="2" class="btnRetour"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
       <div class="row listDefi">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette">
-          <img src="images/defi01.jpg" alt="Defi 01" />
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:0; margin-top:-5px;">
+          <img src="images/defi01_img.jpg" alt="Defi 01" style="width:100%; height:auto;"/>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h3 style="font-weight:bold;">Plus on est de fous, plus on (t)rie !</h3>
         </div>
       </div>
-
-      <p>Plus on est de fous, plus on (t)rie !</p>
-      <p>Desciption du défi toussa toussa...
+      <p>Desciption du défi toussa toussa...</br>
       bref tout ce dont l'utilisateur a besoin</p>
 
-      <p>17/11/2017 de 13:00 à 18:00 | Entre une heure et 1/2 journée</p>
-
+      <p><strong>17/11/2017 de 13:00 à 18:00</strong> <br/>
+        Entre une heure et 1/2 journée</p>
+      <div class="google-maps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d122647.21036523583!2d-1.5217548210245526!3d47.2137241909526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sfr!4v1511036769839" width="360" height="300" frameborder="0" style="border:0"></iframe>
+      </div>
       <!-- TODO Map -->
       <p>4 participants :</p>
       <!-- TODO list user -->
