bug manifest generation app mobile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <div id="home" class="container showMe">
       <div class="searchArea" style="margin-top: 10px;">
-         <input type="search" name="search" placeholder="Search..">
+         <input type="search" name="search" placeholder="Searchs..">
          <button class="icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
       </div>
 
