page profil + form + carte

--- a/index.html
+++ b/index.html
@@ -146,35 +146,46 @@
     </div>
 
     <div id="defiCreate" class="container hideMe">
-      <button tabindex="2" class="btnRetour retourDetail"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
       <div class="row listDefi">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:0; margin-top:-5px;">
-          <img src="images/defi01_img.jpg" alt="Defi 01" style="width:100%; height:auto;"/>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center;">
+          <h3 style="font-weight:bold; text-align:left;">Je lance un défi...</h3>
+          <div class="jumbotron">
+            <img src="images/lancerDefi01.png" alt="" style="width:100%; height:auto;"/>
+            <img src="images/lancerDefi02.png" alt="" style="width:100%; height:auto; margin-top:20px;"/>
+            <img src="images/lancerDefi03.png" alt="" style="width:100%; height:auto; margin-top:20px;"/>
+          </div>
+          <img src="images/dots_slide.png" alt="next step" style="margin-top:-25px;"/>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h3 style="font-weight:bold;">Plus on est de fous, plus on (t)rie !</h3>
-        </div>
-      </div>
-      <p>Desciption du défi toussa toussa...</br>
-      bref tout ce dont l'utilisateur a besoin</p>
-
-      <p><strong>17/11/2017 de 13:00 à 18:00</strong> <br/>
-        Entre une heure et 1/2 journée</p>
-      <div class="google-maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d122647.21036523583!2d-1.5217548210245526!3d47.2137241909526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sfr!4v1511036769839" width="360" height="300" frameborder="0" style="border:0"></iframe>
-      </div>
-      <div style="margin-top: 15px; margin-bottom: 10px;">
-        <h4>4 participants</h4>
-        <img src="images/participants.png" alt="" style="width:100%; height:auto;"/>
       </div>
     </div>
 
     <div id="welcome" class="container hideMe"></div>
     <div id="inscription" class="container hideMe"></div>
     <div id="login" class="container hideMe"></div>
+
     <div id="profil" class="container hideMe">
-      Profil
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; margin-top:20px;">
+          <img src="images/page_profilPHOTO.png" />
+          <h3 style="font-weight:bold; text-align:center;">Marcel Geeker</h3>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <p>
+            Praesent eget nisl nulla. In placerat erat ligula, eget efficitur mauris laoreet a. <br/><br/>
+            <h4 style="font-weight:bold;">Niveau 3 / 150 points solidaires</h4>
+            <strong>Ville :</strong> Nantes<br/>
+            <strong>Défis :</strong> Bien être et santé<br/><br/>
+            <strong>Sed non nulla pellentesque, tristique nisi quis, finibus felis.</strong> Nullam quis pellentesque erat. Vestibulum elementum posuere vestibulum. Vestibulum malesuada massa vitae lorem maximus cursus. Sed quis aliquam felis. Aliquam erat volutpat.
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="jumbotron">
+            Cras justo perque, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          </div>
+        </div>
+      </div>
     </div>
+
     <div id="modifUser" class="container hideMe"></div>
     <div id="achiv" class="container hideMe">
       Succes et Points !
