--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
     <div id="modifUser" class="container hideMe"></div>
     <div id="achiv" class="container hideMe">
       Succes et Points !
-      <button class="js-push-button">Subscribe to Push Notifications</button>
+      <!-- <button class="js-push-button">Subscribe to Push Notifications</button> -->
+      <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+        Enable Push Messaging
+      </button>
     </div>
     <div id="classement" class="container hideMe"></div>
     <div id="carto" class="container hideMe"></div>
