iPhone modif CSS/class

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 </head>
 <body>
 
-  <header class="header">
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 logo" style="text-align:left;">
+  <header class="header container">
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 logo navbar-header" style="text-align:left; margin-right: 0; margin-left:0;">
       <img id="mainLogo" src="images/LOGO_DIFFUZ_JAUNE.svg" alt="Revenir à la page d’accueil" />
     </div>
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align:right;">
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 navbar-right" style="text-align:right;">
       <button id="butAchiv" type="button" class="btn btn-default headerButton" aria-label="Refresh Right Align" title="Achivement">
         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
       </button>
