--- a/index.html
+++ b/index.html
@@ -124,9 +124,61 @@
     <div id="defiDetail" class="container hideMe">
       <button tabindex="2" class="btnRetour retourDetail"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
       <div class="row listDefi">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:0; margin-top:-5px;">
-          <img src="images/defi01_img.jpg" alt="Defi 01" style="width:100%; height:auto;"/>
+
+        <!--Carousel-->
+        <div id="sidebar-carousel-1" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators grey">
+            <li data-target="#sidebar-carousel-1" data-slide-to="0" class="active"></li>
+            <li data-target="#sidebar-carousel-1" data-slide-to="1"></li>
+            <li data-target="#sidebar-carousel-1" data-slide-to="2"></li>
+            <li data-target="#sidebar-carousel-1" data-slide-to="3"></li>
+            <li data-target="#sidebar-carousel-1" data-slide-to="4"></li>
+            <li data-target="#sidebar-carousel-1" data-slide-to="5"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi00_img.jpg" alt="...">
+              </a>
+            </div>
+            <div class="item">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi01_img.jpg" alt="...">
+              </a>
+            </div>
+            <div class="item">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi02_img.jpg" alt="...">
+              </a>
+            </div>
+            <div class="item">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi03_img.jpg" alt="...">
+              </a>
+            </div>
+            <div class="item">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi04_img.jpg" alt="...">
+              </a>
+            </div>
+            <div class="item">
+              <a href="" data-lightbox="image-1" title="">
+              <img src="images/defi05_img.jpg" alt="...">
+              </a>
+            </div>
+          </div>
+           <!-- Controls -->
+           <!--
+          <a class="left carousel-control" href="#sidebar-carousel-1" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#sidebar-carousel-1" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+          -->
         </div>
+        <!--/Carousel-->
+
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <h3 style="font-weight:bold;">Plus on est de fous, plus on (t)rie !</h3>
         </div>
