move push debug

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
     <div id="modifUser" class="container hideMe"></div>
     <div id="achiv" class="container hideMe">
       Succes et Points !
+    </div>
+    <div id="classement" class="container hideMe"></div>
+    <div id="carto" class="container hideMe"></div>
+    <div id="debug" class="container hideMe">
       <!-- <button class="js-push-button">Subscribe to Push Notifications</button> -->
       <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
         Enable Push Messaging
@@ -218,8 +222,6 @@
       <pre><code class="js-subscription-json"></code></pre>
     </section>
     </div>
-    <div id="classement" class="container hideMe"></div>
-    <div id="carto" class="container hideMe"></div>
 
   </main>
 
