--- a/index.html
+++ b/index.html
@@ -99,34 +99,22 @@
           </ol>
           <div class="carousel-inner">
             <div class="item active">
-              <a href="" data-lightbox="image-1" title="">
               <img src="images/defi00_img.jpg" alt="...">
-              </a>
             </div>
             <div class="item">
-              <a href="" data-lightbox="image-1" title="">
               <img src="images/defi01_img.jpg" alt="...">
-              </a>
             </div>
-            <div class="item">
-              <a href="" data-lightbox="image-1" title="">
+            <div class="item">>
               <img src="images/defi02_img.jpg" alt="...">
-              </a>
             </div>
             <div class="item">
-              <a href="" data-lightbox="image-1" title="">
               <img src="images/defi03_img.jpg" alt="...">
-              </a>
             </div>
             <div class="item">
-              <a href="" data-lightbox="image-1" title="">
               <img src="images/defi04_img.jpg" alt="...">
-              </a>
             </div>
             <div class="item">
-              <a href="" data-lightbox="image-1" title="">
               <img src="images/defi05_img.jpg" alt="...">
-              </a>
             </div>
           </div>
            <!-- Controls -->
@@ -201,9 +189,25 @@
     </div>
 
     <div id="modifUser" class="container hideMe"></div>
+
     <div id="achiv" class="container hideMe">
-      Succes et Points !
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; margin-top:20px;">
+          <img src="images/points_userProfile.png" / style="width:100%; height: auto;">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="jumbotron">
+            Cras justo perque, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          </div>
+        </div>
+      </div>
     </div>
+
+
+
+
+
+
     <div id="classement" class="container hideMe"></div>
     <div id="carto" class="container hideMe"></div>
     <div id="debug" class="container hideMe">
