--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
           <a href="javascript:void(0)"><img src="images/defi00.jpg" alt="Defi 00" /></a>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette temp">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 vignette debug">
           <a href="javascript:void(0)"><img src="images/defi01.jpg" alt="Defi 01" /></a>
         </div>
       </div>
