--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 navbar-right" style="text-align:right;">
       <button id="butAchiv" type="button" class="btn btn-default headerButton" aria-label="Refresh Right Align" title="Achivement">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
       </button>
       <button id="butHome" type="button" class="btn btn-default headerButton" aria-label="Add Right Align" title="home">
         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -104,7 +104,7 @@
             <div class="item">
               <img src="images/defi01_img.jpg" alt="...">
             </div>
-            <div class="item">>
+            <div class="item">
               <img src="images/defi02_img.jpg" alt="...">
             </div>
             <div class="item">
@@ -195,9 +195,36 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; margin-top:20px;">
           <img src="images/points_userProfile.png" / style="width:100%; height: auto;">
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <div class="jumbotron">
-            Cras justo perque, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:right; margin-top:20px;">
+          <a href="javascript:alert('More information soon, stay tuned with us :)');"><img src="images/more_info_btn.png" style="width:90px; height:auto;"></a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top:20px;">
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>20 points</strong> / Lorem ipsum avec sit amet <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>40 points</strong> / Amendo per quantum lorem <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>20 points</strong> / Nister quorum vaig per sempre <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>10 points</strong> / Lorem ipsum avec sit amet <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>15 points</strong> / Bistas un per quantum lorem <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>50 points</strong> / Nomenus quorum vaig per sempre <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>20 points</strong> / Lorem ipsum avec sit amet <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px;">
+            <strong>10 points</strong> / Amendo per quantum lorem <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
+          </div>
+          <div class="jumbotron" style="margin:5px 0 ; padding: 10px; margin-bottom: 50px;">
+            <strong>20 points</strong> / Nister quorum vaig per sempre <span class="glyphicon glyphicon-menu-right" style="float: right; padding-top: 2px;" aria-hidden="true"></span>
           </div>
         </div>
       </div>
@@ -209,10 +236,11 @@
 
 
     <div id="classement" class="container hideMe"></div>
-    <div id="carto" class="container hideMe cartoSwap" style="height:2000px">
-      <div class="google-maps">
+    <div id="carto" class="container hideMe cartoSwap" style="margin-top:10px;">
+        <img src="images/Gmaps.jpg" / style="width:100%; height: auto;">
+      <!--
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d122647.21036523583!2d-1.5217548210245526!3d47.2137241909526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sfr!4v1511036769839" width="360" height="300" frameborder="0" style="border:0"></iframe>
-      </div>
+      -->
     </div>
     <div id="debug" class="container hideMe">
       <!-- <button class="js-push-button">Subscribe to Push Notifications</button> -->
