bouton rejoindre défi

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
   </main>
 
   <button tabindex="2" id="btnAddChallenge" class="btnAddChallenge">Add challenge</button>
+  <button tabindex="2" id="btnOkDefi" class="btnOkDefi"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
 
   <div class="loader">
     <svg viewBox="0 0 32 32" width="32" height="32">
