logo + header changed

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p>
             Praesent eget nisl nulla. In placerat erat ligula, eget efficitur mauris laoreet a. <br/><br/>
-            <h4 style="font-weight:bold;">Niveau 3 / 150 points solidaires</h4>
+            <h4 style="font-weight:bold;">Niveau 6 / 1200 points solidaires</h4>
             <strong>Ville :</strong> Nantes<br/>
             <strong>Défis :</strong> Bien être et santé<br/><br/>
             <strong>Sed non nulla pellentesque, tristique nisi quis, finibus felis.</strong> Nullam quis pellentesque erat. Vestibulum elementum posuere vestibulum. Vestibulum malesuada massa vitae lorem maximus cursus. Sed quis aliquam felis. Aliquam erat volutpat.
@@ -262,7 +262,7 @@
   </main>
 
   <button tabindex="2" id="btnAddChallenge" class="btnAddChallenge">Add challenge</button>
-  <button tabindex="2" id="btnOkDefi" class="btnOkDefi"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
+  <button tabindex="2" id="btnOkDefi" class="btnOkDefi" onclick="javascript:alert('Merci pour relèver le défi !');">Je relève le défi</button>
 
   <div class="loader">
     <svg viewBox="0 0 32 32" width="32" height="32">
